[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "cloudmrhub"
version = "0.0.1"
authors = [
  { name="Dr. Eros Montin, PhD", email="eros.montin@gmail.com" },
]
description = "SNR and Recon"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["matplotlib","scipy","Pillow","sphinx", "sphinx_rtd_theme","raider_eros_montin @ git+https://github.com/erosmontin/raider.git","pynico_eros_montin @ git+https://github.com/erosmontin/pynico.git"]

[project.urls]
"Homepage" = "https://github.com/erosmontin/cmrocode"
"Bug Tracker" = "https://github.com/erosmontin/cmrocode/issues"
