[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["**/*.py"]

[project]
name = "cloudmrhub"
version = "1.0.3.5"
changes= "CHANGES.md"
authors = [
  { name="Dr. Eros Montin, PhD", email="eros.montin@gmail.com" },
]
description = "SNR and Recon"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pygrappa","matplotlib","scipy","Pillow","sphinx", "sphinx_rtd_theme","raider_eros_montin @ git+https://github.com/erosmontin/raider.git","pynico_eros_montin @ git+https://github.com/erosmontin/pynico.git","pyable_eros_montin @ git+https://github.com/erosmontin/pyable.git"]

[project.urls]
"Homepage" = "https://github.com/erosmontin/cloudmrhub"
"Bug Tracker" = "https://github.com/erosmontin/cloudmrhub/issues"

[tool.setuptools.dynamic]
version = {attr = "cloudmrhub.__version__"}